Icons update and remove the Robotics Gallery

--- a/index.html
+++ b/index.html
@@ -607,25 +607,25 @@
       <h2 class="section-title"><i class="ph ph-brain"></i> Robotics & AI Skills</h2>
       <div class="skills-list">
         <div class="skill-group"><span class="skill-group-title">Robotics Software</span>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-cube"></i></span>ROS</div>
-          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png" alt="Gazebo" style="height:1.2em;vertical-align:middle;"></span>Gazebo</div>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-camera"></i></span>OpenCV</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://raw.githubusercontent.com/ros/rosdistro/master/ros_logo.svg" alt="ROS" style="height:1.5em;vertical-align:middle;"/></span>ROS</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png" alt="Gazebo" style="height:1.5em;vertical-align:middle;"/></span>Gazebo</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg" alt="OpenCV" style="height:1.5em;vertical-align:middle;"/></span>OpenCV</div>
         </div>
         <div class="skill-group"><span class="skill-group-title">AI / ML</span>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-python-logo"></i></span>Python</div>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-brain"></i></span>PyTorch</div>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-brain"></i></span>TensorFlow</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" style="height:1.5em;vertical-align:middle;"/></span>Python</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/1/10/PyTorch_logo_icon.svg" alt="PyTorch" style="height:1.5em;vertical-align:middle;"/></span>PyTorch</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Tensorflow_logo.svg" alt="TensorFlow" style="height:1.5em;vertical-align:middle;"/></span>TensorFlow</div>
         </div>
         <div class="skill-group"><span class="skill-group-title">Control & Estimation</span>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-gear"></i></span>MPC, PID, LQR</div>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-wave-sine"></i></span>Kalman Filters</div>
+          <div class="skill-item"><span class="skill-icon"><svg width="20" height="20" viewBox="0 0 20 20"><circle cx="10" cy="10" r="8" fill="#a259ff"/><rect x="7" y="7" width="6" height="6" rx="2" fill="#fff"/></svg></span>MPC, PID, LQR</div>
+          <div class="skill-item"><span class="skill-icon"><svg width="20" height="20" viewBox="0 0 20 20"><path d="M2 10 Q6 2 10 10 T18 10" stroke="#7fdbff" stroke-width="2" fill="none"/><circle cx="10" cy="10" r="2" fill="#a259ff"/></svg></span>Kalman Filters</div>
         </div>
         <div class="skill-group"><span class="skill-group-title">Simulation & Mapping</span>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-map"></i></span>SLAM</div>
-          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png" alt="MATLAB" style="height:1.2em;vertical-align:middle;"></span>MATLAB</div>
+          <div class="skill-item"><span class="skill-icon"><svg width="20" height="20" viewBox="0 0 20 20"><rect x="3" y="7" width="14" height="6" rx="3" fill="#0ff" opacity="0.7"/><circle cx="10" cy="10" r="3" fill="#a259ff"/></svg></span>SLAM</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png" alt="MATLAB" style="height:1.5em;vertical-align:middle;"/></span>MATLAB</div>
         </div>
         <div class="skill-group"><span class="skill-group-title">Programming</span>
-          <div class="skill-item"><span class="skill-icon"><i class="ph ph-cpp"></i></span>C++</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++" style="height:1.5em;vertical-align:middle;"/></span>C++</div>
         </div>
       </div>
     </div>
@@ -637,35 +637,17 @@
     </svg>
   </div>
 
-  <!-- Robotics Gallery Section -->
-  <section class="section">
-    <div class="container">
-      <h2 class="section-title"><i class="ph ph-image"></i> Robotics Gallery</h2>
-      <div class="gallery-list">
-        <img src="https://images.pexels.com/photos/256381/pexels-photo-256381.jpeg?auto=compress&w=400" alt="Robot Arm" class="gallery-img" />
-        <img src="https://images.pexels.com/photos/110854/pexels-photo-110854.jpeg?auto=compress&w=400" alt="Autonomous Car" class="gallery-img" />
-        <img src="https://images.pexels.com/photos/325229/pexels-photo-325229.jpeg?auto=compress&w=400" alt="Robotics Lab" class="gallery-img" />
-      </div>
-    </div>
-  </section>
-  <!-- Section Divider -->
-  <div class="section-divider">
-    <svg width="100%" height="40" viewBox="0 0 1440 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 20 Q 720 -20 1440 20" stroke="#a259ff" stroke-width="3" fill="none"/>
-    </svg>
-  </div>
-
   <!-- Tech Stack Section -->
   <section class="section">
     <div class="container">
       <h2 class="section-title"><i class="ph ph-gear"></i> Tech Stack</h2>
       <div class="tech-stack-list">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/ROS_logo.svg" alt="ROS" class="tech-logo" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png" alt="Gazebo" class="tech-logo" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png" alt="MATLAB" class="tech-logo" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Tensorflow_logo.svg" alt="TensorFlow" class="tech-logo" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/PyTorch_logo_icon.svg" alt="PyTorch" class="tech-logo" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg" alt="OpenCV" class="tech-logo" />
+        <img src="https://raw.githubusercontent.com/ros/rosdistro/master/ros_logo.svg" alt="ROS" class="tech-logo" style="background:#fff;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png" alt="MATLAB" class="tech-logo" style="background:#fff;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Tensorflow_logo.svg" alt="TensorFlow" class="tech-logo" style="background:#fff;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/PyTorch_logo_icon.svg" alt="PyTorch" class="tech-logo" style="background:#fff;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg" alt="OpenCV" class="tech-logo" style="background:#fff;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png" alt="Gazebo" class="tech-logo" style="background:#fff;" />
       </div>
     </div>
   </section>
