Matlab OpenCV and Gazebo icon updates

--- a/index.html
+++ b/index.html
@@ -607,9 +607,9 @@
       <h2 class="section-title"><i class="ph ph-brain"></i> Robotics & AI Skills</h2>
       <div class="skills-list">
         <div class="skill-group"><span class="skill-group-title">Robotics Software</span>
-          <div class="skill-item"><span class="skill-icon"><img src="https://raw.githubusercontent.com/ros/rosdistro/master/ros_logo.svg" alt="ROS" style="height:1.5em;vertical-align:middle;"/></span>ROS</div>
-          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png" alt="Gazebo" style="height:1.5em;vertical-align:middle;"/></span>Gazebo</div>
-          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg" alt="OpenCV" style="height:1.5em;vertical-align:middle;"/></span>OpenCV</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/ROS_logo.svg" alt="ROS" style="height:1.5em;vertical-align:middle;background:#fff;border-radius:4px;padding:2px;" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/ros/rosdistro/master/ros_logo.png'"/></span>ROS</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://raw.githubusercontent.com/osrf/gazebo/master/tools/images/gazebo_logo.png" alt="Gazebo" style="height:1.5em;vertical-align:middle;background:#fff;border-radius:4px;padding:2px;" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png'"/></span>Gazebo</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/3/32/OpenCV_Logo_with_text_svg.png" alt="OpenCV" style="height:1.5em;vertical-align:middle;background:#fff;border-radius:4px;padding:2px;" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg'"/></span>OpenCV</div>
         </div>
         <div class="skill-group"><span class="skill-group-title">AI / ML</span>
           <div class="skill-item"><span class="skill-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" style="height:1.5em;vertical-align:middle;"/></span>Python</div>
@@ -622,7 +622,7 @@
         </div>
         <div class="skill-group"><span class="skill-group-title">Simulation & Mapping</span>
           <div class="skill-item"><span class="skill-icon"><svg width="20" height="20" viewBox="0 0 20 20"><rect x="3" y="7" width="14" height="6" rx="3" fill="#0ff" opacity="0.7"/><circle cx="10" cy="10" r="3" fill="#a259ff"/></svg></span>SLAM</div>
-          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png" alt="MATLAB" style="height:1.5em;vertical-align:middle;"/></span>MATLAB</div>
+          <div class="skill-item"><span class="skill-icon"><img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="MATLAB" style="height:1.5em;vertical-align:middle;background:#fff;border-radius:4px;padding:2px;" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png'"/></span>MATLAB</div>
         </div>
         <div class="skill-group"><span class="skill-group-title">Programming</span>
           <div class="skill-item"><span class="skill-icon"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++" style="height:1.5em;vertical-align:middle;"/></span>C++</div>
@@ -642,12 +642,12 @@
     <div class="container">
       <h2 class="section-title"><i class="ph ph-gear"></i> Tech Stack</h2>
       <div class="tech-stack-list">
-        <img src="https://raw.githubusercontent.com/ros/rosdistro/master/ros_logo.svg" alt="ROS" class="tech-logo" style="background:#fff;" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png" alt="MATLAB" class="tech-logo" style="background:#fff;" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Tensorflow_logo.svg" alt="TensorFlow" class="tech-logo" style="background:#fff;" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/PyTorch_logo_icon.svg" alt="PyTorch" class="tech-logo" style="background:#fff;" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg" alt="OpenCV" class="tech-logo" style="background:#fff;" />
-        <img src="https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png" alt="Gazebo" class="tech-logo" style="background:#fff;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/ROS_logo.svg" alt="ROS" class="tech-logo" style="background:#fff;border-radius:8px;padding:4px;max-height:40px;" onerror="this.onerror=null;this.src='https://raw.githubusercontent.com/ros/rosdistro/master/ros_logo.png'" />
+        <img src="https://raw.githubusercontent.com/osrf/gazebo/master/tools/images/gazebo_logo.png" alt="Gazebo" class="tech-logo" style="background:#fff;border-radius:8px;padding:4px;max-height:40px;" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/b/bb/Gazebo_logo.png'" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/21/Matlab_Logo.png" alt="MATLAB" class="tech-logo" style="background:#fff;border-radius:8px;padding:4px;max-height:40px;" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/6/6a/Matlab_Logo.png'" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Tensorflow_logo.svg" alt="TensorFlow" class="tech-logo" style="background:#fff;border-radius:8px;padding:4px;max-height:40px;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/1/10/PyTorch_logo_icon.svg" alt="PyTorch" class="tech-logo" style="background:#fff;border-radius:8px;padding:4px;max-height:40px;" />
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/32/OpenCV_Logo_with_text_svg.png" alt="OpenCV" class="tech-logo" style="background:#fff;border-radius:8px;padding:4px;max-height:40px;" onerror="this.onerror=null;this.src='https://upload.wikimedia.org/wikipedia/commons/2/29/OpenCV_Logo_with_text_svg_version.svg'" />
       </div>
     </div>
   </section>
